# workshop-adk-a2a

./: .env  BLOG_POST.md  README.md  README_EN.md  pyproject.toml
analytics-mcp-server/: http_server.py  pyproject.toml  run_server.py  server.py  test_server.py
master-agent/: agent.py
mcp-server/: pyproject.toml  server.py  test_server.py
pokedex_assistant/: __init__.py  a2a_client.py  agent.py  test_client.py
pokemon_agent/: agent.py  test_client.py
